Revision history for Number::Phone::CountryCode.

CURRENT
    - Makefile.PL: only require version 5.008

0.01  Fri Feb 20 11:11:59 2009
    - original version